--- a/index.html
+++ b/index.html
@@ -407,90 +407,119 @@
       <h5 class="text-center">Formulario de Contacto</h5>
     </div>
 
+    <div class="text-center mt-3">
+      <p>
+        "¿Quieres ponerte en contacto con el creador de este blog? ¡Llena el
+        siguiente formulario!"
+      </p>
+    </div>
+
     <div class="formulario-container mb-3 mt-3">
-        <form action="https://formsubmit.co/9d32d7c68dff6eb93062892b92666d39" method="POST">
-          <div style="display: flex; justify-content: center">
-            <div style="flex: 1; margin-right: 10px">
-              <label for="nombre"
-                ><img src="./assets/user_icon.png" alt="Icono de usuario" />
-                Nombre:</label
-              >
-              <input
-                type="text"
-                id="nombre"
-                name="nombre"
-                placeholder="Fernando Larios Sánchez"
-                required
-              />
-            </div>
-            <div style="flex: 1; margin-left: 10px">
-              <label for="telefono"
-                ><img src="./assets/phone_icon.png" alt="Icono de teléfono" />
-                Teléfono:</label
-              >
-              <input
-                type="text"
-                id="telefono"
-                name="telefono"
-                placeholder="2284037560"
-              />
-            </div>
-          </div>
-          <div>
-            <label for="email"
-              ><img
-                src="./assets/email_icon.png"
-                alt="Icono de correo electrónico"
-              />
-              Correo Electrónico:</label
+      <form
+        action="https://formsubmit.co/9d32d7c68dff6eb93062892b92666d39"
+        method="POST"
+      >
+        <div style="display: flex; justify-content: center">
+          <div style="flex: 1; margin-right: 10px">
+            <label for="nombre"
+              ><img src="./assets/user_icon.png" alt="Icono de usuario" />
+              Nombre:</label
             >
             <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="fernandols0902@gmail.com"
+              type="text"
+              id="nombre"
+              name="nombre"
+              placeholder="Fernando Larios Sánchez"
               required
             />
           </div>
-          <div>
-            <label for="comentario"
-              ><img src="./assets/comment_icon.png" alt="Icono de comentario" />
-              Comentario:</label
+          <div style="flex: 1; margin-left: 10px">
+            <label for="telefono"
+              ><img src="./assets/phone_icon.png" alt="Icono de teléfono" />
+              Teléfono:</label
             >
-            <textarea
-              id="comentario"
-              name="comentario"
-              placeholder="Como fanático de la Fórmula 1, encontrar un blog tan completo y bien organizado es una experiencia satisfactoria y agradable."
-              required
-            ></textarea>
+            <input
+              type="text"
+              id="telefono"
+              name="telefono"
+              placeholder="2284037560"
+            />
           </div>
-          <div style="text-align: center">
-            <input type="submit" value="Enviar" />
-          </div>
-        </form>
-      </div>
+        </div>
+        <div>
+          <label for="email"
+            ><img
+              src="./assets/email_icon.png"
+              alt="Icono de correo electrónico"
+            />
+            Correo Electrónico:</label
+          >
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="fernandols0902@gmail.com"
+            required
+          />
+        </div>
+        <div>
+          <label for="comentario"
+            ><img src="./assets/comment_icon.png" alt="Icono de comentario" />
+            Mensaje:</label
+          >
+          <textarea
+            id="comentario"
+            name="comentario"
+            placeholder="Como fanático de la Fórmula 1, encontrar un blog tan completo y bien organizado es una experiencia satisfactoria y agradable."
+            required
+          ></textarea>
+        </div>
+        <div style="text-align: center">
+          <input type="submit" value="Enviar" />
+        </div>
+      </form>
+    </div>
 
-      <footer>
-        <div id="contacto">
-          <h5>Datos de Contacto</h5>
+    <div class="encabezado">
+      <h5 class="text-center">Comentarios</h5>
+    </div>
+
+    <div class="txt text-center mt-3">
+      <p>
+        "¡Queremos conocer tu opinión sobre el blog! ¡Déjanos tu comentario!"
+      </p>
+    </div>
+
+    <script
+      src="https://utteranc.es/client.js"
+      repo="FernandozS05/PW_BlogF1_F"
+      issue-term="pathname"
+      theme="github-dark-orange"
+      crossorigin="anonymous"
+      async
+    ></script>
+
+    <footer>
+      <div id="contacto">
+        <h5>Datos de Contacto</h5>
+      </div>
+      <div id="redes-sociales">
+        <div class="social-icons">
+          <a href="#"><img src="./assets/github_icon.png" alt="Github" /></a>
+          <a href="#"><img src="./assets/discord_icon.png" alt="Discord" /></a>
+          <a href="#"
+            ><img src="./assets/whatsapp_icon.png" alt="Whatsapp"
+          /></a>
+          <a href="#"
+            ><img src="./assets/facebook_icon.png" alt="Facebook"
+          /></a>
+          <a href="#"><img src="./assets/gmail_icon.png" alt="Gmail" /></a>
         </div>
-        <div id="redes-sociales">
-          <div class="social-icons">
-            <a href="#"><img src="./assets/github_icon.png" alt="Github" /></a>
-            <a href="#"><img src="./assets/discord_icon.png" alt="Discord" /></a>
-            <a href="#"
-              ><img src="./assets/whatsapp_icon.png" alt="Whatsapp"
-            /></a>
-            <a href="#"
-              ><img src="./assets/facebook_icon.png" alt="Facebook"
-            /></a>
-            <a href="#"><img src="./assets/gmail_icon.png" alt="Gmail" /></a>
-          </div>
-        </div>
-        <div id="derechos-autor">
-          <h6>Aviso de Derechos de Autor</h6>
-          <p>Copyright © 2024 | Fernando Larios Sánchez</p>
-        </div>
-      </footer>
+      </div>
+      <div id="derechos-autor">
+        <h6>Aviso de Derechos de Autor</h6>
+        <p>Copyright © 2024 | Fernando Larios Sánchez</p>
+      </div>
+    </footer>
   </body>
 </html>
