--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
       <nav class="navbar navbar-expand-sm left-section">
         <div class="container-fluid">
           <div class="navbar-brand">
-            <img
-              src="./assets/Logo.png"
-              class="logo-img"
-              alt="Icono del Blog"
-            />
+            <a href="index.html">
+              <!-- Agregar este enlace -->
+              <img
+                src="./assets/Logo.png"
+                class="logo-img"
+                alt="Icono del Blog"
+              />
+            </a>
             <h1 class="navbar-title">
               Adrenalina en la Pista: Fórmula 1 al Límite
             </h1>
@@ -443,6 +446,7 @@
               id="telefono"
               name="telefono"
               placeholder="2284037560"
+              required
             />
           </div>
         </div>
