--- a/vehiculos.html
+++ b/vehiculos.html
@@ -1,11 +1,176 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vehículos - Adrenalina en la Pista: Fórmula 1 al Límite</title>
-</head>
-<body>
-    <!-- Contenido de la sección de Vehículos -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vehículos</title>
+    <link rel="icon" href="./assets/icon.jpeg" type="image/png" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="scrip.js"></script>
+  </head>
+
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-sm left-section">
+        <div class="container-fluid">
+          <div class="navbar-brand">
+            <a href="index.html">
+              <img
+                src="./assets/Logo.png"
+                class="logo-img"
+                alt="Icono del Blog"
+              />
+            </a>
+            <h1 class="navbar-title">
+              Adrenalina en la Pista: Fórmula 1 al Límite
+            </h1>
+          </div>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="equipos.html"
+                  >Equipos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="pilotos.html"
+                  >Pilotos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="vehiculos.html"
+                  >Vehículos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="calendario.html"
+                  >Calendario</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <div class="container mt-4">
+      <div class="row row-cols-2 row-cols-md-4 g-4">
+        <div class="col mb-4">
+          <img src="./assets/vh1.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Red Bull Racing</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh2.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Ferrari</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh3.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">McLaren F1</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh4.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Mercedes</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh5.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Aston Martin Racing</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh6.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">RB</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh7.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Haas F1 Team</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh8.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Sauber F1 Team</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh9.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Alpine</p>
+        </div>
+        <div class="col mb-4">
+          <img src="./assets/vh10.webp" class="equipo-img img-thumbnail" />
+          <p class="text-center">Williams</p>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div id="contacto">
+        <h5>Datos de Contacto</h5>
+      </div>
+      <div id="redes-sociales">
+        <div class="social-icons">
+          <a href="#"><img src="./assets/github_icon.png" alt="Github" /></a>
+          <a href="#"><img src="./assets/discord_icon.png" alt="Discord" /></a>
+          <a href="#"
+            ><img src="./assets/whatsapp_icon.png" alt="Whatsapp"
+          /></a>
+          <a href="#"
+            ><img src="./assets/facebook_icon.png" alt="Facebook"
+          /></a>
+          <a href="#"><img src="./assets/gmail_icon.png" alt="Gmail" /></a>
+        </div>
+      </div>
+      <div id="derechos-autor">
+        <h6>Aviso de Derechos de Autor</h6>
+        <p>Copyright © 2024 | Fernando Larios Sánchez</p>
+      </div>
+    </footer>
+  </body>
 </html>
