--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
         <div style="text-align: center">
           <input type="submit" value="Enviar" />
         </div>
+        <input type="hidden" name="_next" value="https://fernandozs05.github.io/PW_BlogF1_F/">
       </form>
     </div>
 
