--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
         action="https://formsubmit.co/9d32d7c68dff6eb93062892b92666d39"
         method="POST"
       >
+      <input type="hidden" name="_next" value="https://fernandozs05.github.io/PW_BlogF1_F/">
         <div style="display: flex; justify-content: center">
           <div style="flex: 1; margin-right: 10px">
             <label for="nombre"
@@ -481,7 +482,6 @@
         <div style="text-align: center">
           <input type="submit" value="Enviar" />
         </div>
-        <input type="hidden" name="_next" value="https://fernandozs05.github.io/PW_BlogF1_F/thanks.html">
       </form>
     </div>
 
